--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1 class="text-2xl font-bold font-serif">Book Explorer</h1>
         <div class="flex gap-4">
           <a href="index.html" class="px-4 py-2 text-stone-700 rounded-lg hover:bg-gray-100 transition">Home</a>
-          <a href="#" class="px-4 py-2 text-stone-700 hover:bg-gray-100 rounded-lg transition">Favorites</a>
+          <a href="./favorites.html" class="px-4 py-2 text-stone-700 hover:bg-gray-100 rounded-lg transition">Favorites</a>
           <a href="about.html" class="px-4 py-2 text-stone-700 hover:bg-gray-100 rounded-lg transition">About</a>  
         </div>
       </div>
@@ -328,6 +328,6 @@
     </div>
   </footer>
 
-<!-- <script type = "module" src="../lab2/main.js"></script> -->
+<script src="./main.js"></script>
 </body>
 </html>
