--- a/favorites.html
+++ b/favorites.html
@@ -83,6 +83,6 @@
         </div>
     </footer>
 
-    <script src="favorites.js"></script>
+    <script src="/js/favorites.js"></script>
 </body>
 </html>
