--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       }
    </style>
 </head>
-<body class="border-l-orange-200">
+<body class="bg-amber-50">
   <!-- Navigation -->
-  <nav class="bg-rose-100 shadow-md">
+  <nav class="bg-amber-50 shadow-md">
     <div class="container mx-auto px-4 py-4">
       <div class="flex items-center justify-between">
         <h1 class="text-2xl font-bold font-serif">Book Explorer</h1>
