changed the cards color in javascript files

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     </div>
 
     <!-- category-dropdown -->
-    <div class="flex items-center gap-4">
-      <span class="text-gray-700 font-medium">Filter by:</span>
+    <div class="flex text-purple-300 items-center gap-4">
+      <span class="text-purple-500 font-medium">Filter by:</span>
       <div class="category-dropdown">
         <button class="px-4 py-2 bg-white border border-gray-300 rounded-lg hover:bg-gray-50 transition flex items-center gap-2">
           <span id="selectedCategory">All Categories</span>
@@ -122,7 +122,7 @@
 
 <!-- Loading -->
 <div id="loadingSpinner" class="hidden text-center py-12">
-  <div class="inline-block animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600"></div>
+  <div class="inline-block animate-spin rounded-full h-12 w-12 border-b-2 border-purple-600"></div>
   <p class="mt-4 text-gray-600 italic">Loading books....</p>
 </div>
 
