--- a/favorites.html
+++ b/favorites.html
@@ -15,16 +15,16 @@
         }
     </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-purple-100">
     <!-- Navigation -->
-    <nav class="bg-white shadow-md">
+    <nav class="bg-purple-300 shadow-md">
         <div class="container mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
-                <h1 class="text-2xl font-bold text-blue-600">Book Explorer</h1>
+                <h1 class="text-2xl font-bold font-serif">Book Explorer</h1>
                 <div class="flex gap-4">
-                    <a href="index.html" class="px-4 py-2 text-gray-700 hover:bg-gray-100 rounded-lg transition">Home</a>
-                    <a href="favorites.html" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Favorites</a>
-                    <a href="about.html" class="px-4 py-2 text-gray-700 hover:bg-gray-100 rounded-lg transition">About</a>
+                    <a href="index.html" class="px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">Home</a>
+                    <a href="favorites.html" class="px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg  transition">Favorites</a>
+                    <a href="about.html" class="px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">About</a>
                 </div>
             </div>
         </div>
@@ -33,8 +33,8 @@
     <!-- Favorites Section -->
     <section class="container mx-auto px-4 py-8">
         <div class="text-center mb-12">
-            <h2 class="text-4xl font-bold text-gray-800 mb-4">Your Favorite Books</h2>
-            <p class="text-gray-600 text-lg">All your saved books in one place</p>
+            <h2 class="text-4xl font-bold font-serif text-purple-800 mb-4">Your Favorite Books</h2>
+            <p class="text-purple-100 font-mono text-lg">All your saved books in one place</p>
         </div>
 
         <!-- Empty State -->
@@ -56,7 +56,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white mt-16">
+    <footer class="bg-indigo-950 text-purple-100 mt-16">
         <div class="container mx-auto px-4 py-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
