changed the style by coloring the pages

--- a/favorites.html
+++ b/favorites.html
@@ -43,7 +43,7 @@
                 <i class="far fa-heart text-gray-300 text-6xl mb-4"></i>
                 <h3 class="text-2xl font-semibold text-gray-600 mb-2">No favorites yet</h3>
                 <p class="text-gray-500 mb-6">Start adding books to your favorites by clicking the heart icon!</p>
-                <a href="index.html" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-semibold">
+                <a href="index.html" class="inline-block px-6 py-3 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition font-semibold">
                     Explore Books
                 </a>
             </div>
