--- a/about.html
+++ b/about.html
@@ -6,16 +6,16 @@
     <title>Book Explorer - About</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50">
+<body class="bg-purple-100">
     <!-- Navigation -->
-    <nav class="bg-white shadow-md">
+    <nav class="bg-purple-300 shadow-md">
       <div class="container mx-auto px-4 py-4">
         <div class="flex items-center justify-between">
-          <h1 class="text-2xl font-bold text-blue-600">Book Explorer</h1>
+          <h1 class="text-2xl font-bold font-serif">Book Explorer</h1>
           <div class="flex gap-4">
-            <a href="index.html" class="px-4 py-2 text-gray-700 hover:bg-gray-100 rounded-lg transition">Home</a>
-            <a href="/lab2/favorites.html" class="px-4 py-2 text-gray-700 hover:bg-gray-100 rounded-lg transition">Favorites</a>
-            <a href="about.html" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">About</a>
+            <a href="index.html" class="px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">Home</a>
+            <a href="/lab2/favorites.html" class="px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">Favorites</a>
+            <a href="about.html" class="px-4 py-2 text-violte-900 hover:bg-text-purple-500 rounded-lg hover:text-white transition">About</a>
           </div>
         </div>
       </div>
@@ -24,10 +24,10 @@
     <!-- About Section -->
     <section class="container mx-auto px-4 py-16">
       <div class="max-w-4xl mx-auto">
-        <h2 class="text-4xl font-bold mb-8 text-gray-800">About Book Explorer</h2>
+        <h2 class="text-4xl font-bold mb-8 font-mono text-gray-800">About Book Explorer</h2>
         
         <div class="bg-white rounded-lg shadow-md p-8 mb-8">
-          <h3 class="text-2xl font-semibold mb-4 text-blue-600">Our Mission</h3>
+          <h3 class="text-2xl font-semibold mb-4 text-purple-600">Our Mission</h3>
           <p class="text-gray-700 leading-relaxed mb-6">
             Book Explorer is dedicated to helping readers discover their next great read. We provide a simple, 
             intuitive platform to search through thousands of books, save your favorites, and build your personal 
@@ -40,34 +40,34 @@
         </div>
   
         <div class="bg-white rounded-lg shadow-md p-8 mb-8">
-          <h3 class="text-2xl font-semibold mb-4 text-blue-600">Features</h3>
+          <h3 class="text-2xl font-semibold mb-4 text-purple-600">Features</h3>
           <ul class="space-y-3">
             <li class="flex items-start">
-              <svg class="w-6 h-6 text-green-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="w-6 h-6 text-purple-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
               </svg>
               <span class="text-gray-700">Search through thousands of books by title, author, or subject</span>
             </li>
             <li class="flex items-start">
-              <svg class="w-6 h-6 text-green-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="w-6 h-6 text-purple-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
               </svg>
               <span class="text-gray-700">Filter books by category (Fiction, Science, History, Fantasy, Mystery)</span>
             </li>
             <li class="flex items-start">
-              <svg class="w-6 h-6 text-green-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="w-6 h-6 text-purple-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
               </svg>
               <span class="text-gray-700">Save your favorite books for easy access later</span>
             </li>
             <li class="flex items-start">
-              <svg class="w-6 h-6 text-green-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="w-6 h-6 text-purple-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
               </svg>
               <span class="text-gray-700">Responsive design that works on all devices</span>
             </li>
             <li class="flex items-start">
-              <svg class="w-6 h-6 text-green-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="w-6 h-6 text-purple-500 mr-3 mt-1" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
               </svg>
               <span class="text-gray-700">Your favorites persist across sessions using local storage</span>
@@ -76,7 +76,7 @@
         </div>
   
         <div class="bg-white rounded-lg shadow-md p-8">
-          <h3 class="text-2xl font-semibold mb-4 text-blue-600">Technology</h3>
+          <h3 class="text-2xl font-semibold mb-4 text-purple-600">Technology</h3>
           <p class="text-gray-700 leading-relaxed mb-4">
             Book Explorer is built with modern web technologies:
           </p>
@@ -92,7 +92,7 @@
     </section>
   
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white mt-16">
+    <footer class="bg-indigo-950 text-purple-100 mt-16">
       <div class="container mx-auto px-4 py-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div>
