fixed the responsiveness to make it more responsive on mobile

--- a/favorites.html
+++ b/favorites.html
@@ -13,7 +13,7 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
-        /* Mobile Menu Animation */
+        /* Mobile Animation */
 #mobileMenu {
   transition: all 0.3s ease-in-out;
   max-height: 0;
@@ -77,7 +77,7 @@
         </button>
       </div>
   
-      <!-- Mobile Menu (hidden by default) -->
+      <!-- Mobile Menu -->
       <div id="mobileMenu" class="hidden md:hidden mt-4 space-y-2 pb-2">
         <a href="index.html" class="block px-4 py-2 text-violet-900 rounded-lg hover:bg-purple-500 hover:text-white transition">Home</a>
         <a href="favorites.html" class="block px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">Favorites</a>
@@ -107,7 +107,7 @@
 
         <!-- Favorites Grid -->
         <div id="favoritesGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-            <!-- Favorite books will be dynamically inserted here -->
+          
         </div>
     </section>
 
