--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Book Explorer - About</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* Mobile Menu Animation */
+      /* Mobile Animation */
 #mobileMenu {
   transition: all 0.3s ease-in-out;
   max-height: 0;
@@ -69,7 +69,7 @@
       </button>
     </div>
 
-    <!-- Mobile Menu (hidden by default) -->
+    <!-- Mobile Menu -->
     <div id="mobileMenu" class="hidden md:hidden mt-4 space-y-2 pb-2">
       <a href="index.html" class="block px-4 py-2 text-violet-900 rounded-lg hover:bg-purple-500 hover:text-white transition">Home</a>
       <a href="favorites.html" class="block px-4 py-2 text-violet-900 hover:bg-purple-500 hover:text-white rounded-lg transition">Favorites</a>
