changed the hero section color

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       }
     </style>
 </head>
-<body class="bg-purple-100">
+<body class="bg-white">
   <!-- Navigation -->
 <nav class="bg-purple-300 shadow-md">
   <div class="container mx-auto px-4 py-4">
@@ -123,7 +123,7 @@
   </div>
 </nav>
 <!-- Hero Section -->
-<section class="bg-slate-900 text-white py-16">
+<section class="bg-purple-400 text-white py-16">
   <div class="container mx-auto px-4 text-center">
     <h2 class="text-2xl text-purple-100 font-mono mb-4">Find Stories That Stay With You</h2>
     <p class="text-l mb-8 font-mono">Dive into a world of stories that inspire, educate, and entertain. Explore new 
